--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,3 +9,21 @@ jobs:
     steps:
     - name: Checkout the repo
       uses: actions/checkout@v1
+    - name: Login to Azure
+      uses: Azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Install npm packages
+      shell: bash
+      run: |
+        npm install
+
+    - name: Build app
+      shell: bash
+      run: |
+        npm run build
+
+    - name: Test app
+      shell: bash
+      run: |
+        npm run test
