--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,10 +9,6 @@ jobs:
     steps:
     - name: Checkout the repo
       uses: actions/checkout@v1
-    - name: Login to Azure
-      uses: Azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
     - name: Install npm packages
       shell: bash
       run: |
@@ -27,6 +23,29 @@ jobs:
       shell: bash
       run: |
         npm run test
+
+    - name: Upload app
+      uses: actions/upload-artifact@v1
+      with:
+        name: app
+        path: build
+
+  deploy_to_dev:
+    needs: build_and_publish
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Download app
+      uses: actions/download-artifact@v1
+      with:
+        name: app
+        path: build
+
+    - name: Login to Azure
+      uses: Azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: Publish app
       uses: Azure/cli@v1.0.0
       with:
